--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "base.html" %} 
 {% block content %}
 <div class="container" style="vertical-align: center;">
-    <div style="text-align:center">
+    <!--<div style="text-align:center">
         <h2>Access Check</h2>
     </div>
     <hr>
@@ -33,5 +33,10 @@
         <h3>Add <a href="{{url_for('addresource')}}">resources</a> and <a href="{{url_for('registration')}}">users</a> before performing access check</h3>
     </div>
     {% endif %}
-</div> <!-- /container -->
+</div> -->
+    <!-- /container -->
+
+    <div class="jumbotron">
+        <h1>Hello, User!</h1>
+    </div>
 {% endblock %}
