--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,11 +30,11 @@
         <div class="container-fluid">
           <div class="navbar-header">
 
-            <a class="navbar-brand" href="{{ url_for('index') }}">Role Based Access Control System</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">Resource Allocator System</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="{{url_for('index')}}">Access Check</a></li>
+              <!--li><a href="{{url_for('index')}}">Access Check</a></li-->
               <li><a href="{{url_for('users')}}">Users</a></li>
               <li><a href="{{url_for('resources')}}">Resources</a></li>
               <li><a href="{{url_for('roles')}}">Roles</a></li>
