--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -25,7 +25,7 @@
             <td>{{ user.email}}</td>
             <td>
                 {% for role in allroles %}
-                {% if role in user.roles %}
+                {% if role.id == user.role_id %}
                 <span class="label label-primary" style="font-size: 14px">{{ role.name }}</span>
                 {% else %}
                 <span class="label label-default" style="font-size: 14px">{{ role.name }}</span>
