--- a/app/templates/newuser.html
+++ b/app/templates/newuser.html
@@ -1,6 +1,25 @@
-{% extends "base.html" %}
-{% block content %}
-<div class="container" style="vertical-align: center; max-width:500px;">
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Resource Allocator - Add User</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+
+    <!-- Custom styles for this template -->
+    <link href="/static/css/navbar.css" rel="stylesheet">
+
+    <script src="/static/jquery-3.1.0.min.js"></script>
+  
+  </head>
+  <body>
+  <div class="container" style="vertical-align: center; max-width:500px;">
 
     {% if noroles %}
     <div style="text-align:center">
@@ -15,15 +34,16 @@
         {{ form.name(class="form-control", placeholder="Name", style="margin-bottom: 5px;") }}
         <label for="email" class="sr-only">Email address</label>
         {{ form.email(class="form-control", placeholder="Email", style="margin-bottom: 5px;") }}
+        
         <label for="password" class="sr-only">Password</label>
         {{ form.password(class="form-control", placeholder="Password", style="margin-bottom: 5px;") }}
+        
         <label for="confirm" class="sr-only">Confirm Password</label>
         {{ form.confirm(class="form-control", placeholder="Confirm Password", style="margin-bottom: 5px;") }}
+
         <label for="role" class="sr-only">Role</label>
-        {{ form.role(class="form-control", placeholder="Role", style="margin-bottom: 5px;") }}
-
+        {{ form.role(class="form-control", placeholder="Role", style="margin-bottom: 5px;")}}
         
-
         <div style="text-align: center; color: #CC0000;">
             {% for field, errors in form.errors.items() %}
             {% for error in errors %}
@@ -44,17 +64,8 @@
     </form>
     {% endif %}
 </div> <!-- /container -->
-{% endblock %}
-{% block headscript %}
-<script>
-    $(function(){
-    {% if isedit %}
-        $("#name").val("{{user.name}}");
-        $("#email").val("{{user.email}}");
-    {% endif %}
-    });
-
-
-
-</script>
-{% endblock %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="/static/js/bootstrap.min.js"></script>
+  </body>
+</html>
