--- a/app/templates/addresource.html
+++ b/app/templates/addresource.html
@@ -37,6 +37,7 @@
     $(function(){
     {% if isedit %}
         $("#name").val("{{res.name}}");
+        $("#quantity").val("{{res.quantity}}");
     {% endif %}
     });
 </script>
