--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -29,7 +28,8 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-
+{% if g.user.is_authenticated and g.user.name=="admin" %}
+            
             <a class="navbar-brand" href="{{ url_for('index') }}">Resource Allocator System</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
@@ -40,6 +40,13 @@
               <li><a href="{{url_for('roles')}}">Roles</a></li>
 
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a style="padding-right:0px" disabled="disabled">{{ g.user.name }}</a></li>
+                <li><a style="padding-right:0px" disabled="disabled">|</a></li>
+                <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            </ul>
+            
+            {% endif %}
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
