--- a/app/templates/newuser.html
+++ b/app/templates/newuser.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,19 +8,21 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resource Allocator - Add User</title>
+    <title>Resource Allocator - {{title}}</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 
     <!-- Custom styles for this template -->
-    <link href="/static/css/navbar.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/navbar.css') }}" rel="stylesheet">
 
-    <script src="/static/jquery-3.1.0.min.js"></script>
-  
+    <script src="{{ url_for('static', filename='jquery-3.1.0.min.js') }}"></script>
+    {% block headscript %}{% endblock %}
   </head>
+
   <body>
-  <div class="container" style="vertical-align: center; max-width:500px;">
+
+<div class="container" style="vertical-align: center; max-width:500px;">
 
     {% if noroles %}
     <div style="text-align:center">
@@ -64,8 +67,8 @@
     </form>
     {% endif %}
 </div> <!-- /container -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
   </body>
 </html>
